# KDQ_SLAM

./: README.md
CMD/: ubuntu_cmd.sh
build-ceres_study-Desktop-Default/: CMakeCache.txt  Makefile  ceres_demo1  ceres_demo2  ceres_study.cbp  cmake_install.cmake
build-eigen_study-unknown-Default/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  eigen_study.cbp  matrix_vector  quad2matrix  rotation2euler  rules.ninja
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/lib/pkgconfig/: vins_stereo.pc
catkin_ws/devel/lib/vins_stereo/: feature_node  vins_node
catkin_ws/devel/share/vins_stereo/cmake/: vins_stereoConfig.cmake
catkin_ws/src/vins_stereo/: CMakeLists.txt
catkin_ws/src/vins_stereo/src/: rosFeatureTest.cpp  rosNodeVins.cpp  rosVinsInterface.cpp  vinsDebugInfo.h  vinsInfoFollow.cpp  vinsInfoFollow.h
catkin_ws/src/vins_stereo/src/config/: car.yaml
catkin_ws/src/vins_stereo/src/feature/: feature.cpp  feature.h
catkin_ws/src/vins_stereo/src/launch/: kill_node.sh  launch_rosbag.sh  rviz_car.rviz
catkin_ws/src/vins_stereo/src/parameters/: parameters.cpp  parameters.h
catkin_ws/src/vins_stereo/src/vins_estimator/: estimator.cpp  estimator.h
ceres_study/: CMakeLists.txt  CMakeLists.txt.user.00abf90
ceres_study/src/: ceres_demo1.cpp  ceres_demo1.h  ceres_demo2.cpp  ceres_demo3.cpp
eigen_study/: CMakeLists.txt
eigen_study/src/: matrix_vector.cpp  quad2matrix.cpp  rotation2euler.cpp
opencv_study/capture_camera/: package.xml
opencv_study/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
opencv_study/devel/lib/capture_camera/: capture_camera  capture_camera_node
opencv_study/devel/lib/feature_detector/: feature_detector_node  harris_detector
opencv_study/devel/lib/pkgconfig/: capture_camera.pc  feature_detector.pc  read_image.pc
opencv_study/devel/lib/read_image/: read_image_node
opencv_study/devel/share/capture_camera/cmake/: capture_cameraConfig.cmake
opencv_study/devel/share/feature_detector/cmake/: feature_detectorConfig.cmake
opencv_study/devel/share/read_image/cmake/: read_imageConfig.cmake
opencv_study/feature_detector/: CMakeLists.txt  package.xml
opencv_study/feature_detector/src/: FeatureDetectorRos.cpp
opencv_study/read_images/: CMakeLists.txt  package.xml~
opencv_study/read_images/src/: read_image.cpp
opencv_study/src/capture_camera/: CMakeLists.txt
opencv_study/src/capture_camera/src/: capture_camera_demo1.cpp
opencv_study/src/feature_detector/: CMakeLists.txt
opencv_study/src/feature_detector/src/: featuredetector.cpp  featuredetector.h  harris_detector.cpp
vins-stereo/devel/: .catkin
vins_stereo/src/: rosNodeVins.cpp  rosVinsInterface.h
vins_stereo/src/launch/: launch_feature_node.sh  launch_rosbag.sh  test.sh
vins_stereo/src/parameters/: parameters.cpp  parameters.h
vscode/helloworld/: hellovs  hellovs.cpp
